<resources>
    <string name="app_name">BookyPocket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">BookyMap</string>
    <string name="menu_readings">Readings</string>
    <string name="title_activity_booky_map">Map</string>


    <!-- HOME BUTTONS -->
    <string name="home_button_findLibrary">Find a library</string>
    <string name="home_button_seeReadings">See my readings</string>
    <string name="home_button_registerBook">Register a new book</string>
    <string name="home_button_manageAccount">Manage my account</string>
    <string name="find_book_button">Find a book</string>
    <string name="text_my_friends">My friends</string>

    <!-- READINGS ACTIVITY-->
    <string name="readings_textView">My readings</string>
    <string name="readings_title">Test in a test</string>
    <string name="readings_author">Test TEST</string>

    <!-- REGISTER ACTIVITY-->
    <string name="registerNewBookText">Register a book</string>
    <string name="register_titleText">Title</string>
    <string name="register_titleValue"></string>
    <string name="register_authorText">Author</string>
    <string name="register_authorValue"></string>
    <string name="register_publicationYearText">Publication Year</string>
    <string name="register_publicationYearValue"></string>
    <string name="register_categoryText">Category</string>
    <string name="register_categorySpinner"></string>
    <string name="register_scanText">Back Cover</string>
    <string name="register_scanButton">Scan barCode</string>
    <string name="registerbook_button">Save</string>


    <!-- BOOK DETAILS ACTIVITY-->
    <string name="detailsBookText">Book details</string>
    <string name="details_titleText">Title</string>
    <string name="details_titleValue"></string>
    <string name="details_authorText">Author</string>
    <string name="details_authorValue"></string>
    <string name="details_publicationYearText">Publication Year</string>
    <string name="details_publicationYearValue"></string>
    <string name="details_categoryText">Category</string>
    <string name="details_categoryValue"></string>
    <string name="details_backCoverText">Back Cover</string>
    <string name="add_to_my_readings">Add to my readings</string>
    <string name="see_preview_link">Go to online preview page</string>

    <!-- BARCODE READER ACTIVITY -->
    <string name="scanBookText">Scan a book</string>
    <string name="isbn">ISBN : </string>
    <string name="stopScanButton">Stop scan</string>

    <!-- MANAGE ACCOUNT ACTIVITY-->
    <string name="manage_changePhotoButton">Change photo</string>
    <string name="manage_lastName">Last name</string>
    <string name="manage_lastNameValue"></string>
    <string name="manage_firstName">First name</string>
    <string name="manage_firstNameValue"></string>
    <string name="manage_DateOfBirth">Date of birth</string>
    <string name="manage_currentpasswordText">Current password</string>
    <string name="manage_newpasswordText">New password</string>
    <string name="manage_passwordValue"></string>
    <string name="manage_modifyPswdButton">Save</string>
    <string name="manage_deleteAccount">Delete my account</string>
    <string name="manage_email_libelle">Email</string>
    <string name="my_account_libelle">My account</string>

    <!-- LOGIN ACTIVITY-->
    <string name="login_adrMail">Email address</string>
    <string name="login_password">Password</string>
    <string name="login_connexion">Sign in</string>
    <string name="login_signUp">No account ? Sign up !</string>

    <!-- SIGNUP ACTIVITY-->
    <string name="signup_email">Email address</string>
    <string name="signup_lastname">LastName</string>
    <string name="signup_firstname">FirstName</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirmPassword">Confirm password</string>
    <string name="signup_DOB">Date of Birth</string>
    <string name="signup_button">Sign up</string>

    <!--    SEARCH BOOK ACTIVITY-->
    <string name="search_button">Search</string>
    <string name="find_book_title">Find your book</string>
    <string name="description_livre">Description</string>


    <string name="add_a_friend">Add a friend</string>
    <string name="serach_friends_title">Add a friends</string>
    <string name="books_of_a_friend">My friend\'s books</string>
    <string name="add_manually_a_book">Add a book manually</string>
    <string name="take_a_picture" >Take a picture</string>


</resources>