<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.RegisterBookActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:onClick="GoHome"
            android:paddingVertical="10dp"
            android:src="?attr/homeAsUpIndicator"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:gravity="start|right"
            android:text="@string/registerNewBookText"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:ignore="MissingConstraints,RtlCompat"></TextView>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/register_titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="30dp"
                android:text="@string/register_titleText"
                android:layout_weight="1"
                android:textColor="#E5B81D"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_titleValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:paddingLeft="30dp"
                android:text="@string/register_titleValue" />

            <TextView
                android:id="@+id/register_authorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:layout_weight="1"
                android:text="@string/register_authorText"
                android:textColor="#E5B81D"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_authorValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:paddingLeft="30dp"
                android:text="@string/register_authorValue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="@string/description_livre"
                android:textColor="#E5B81D"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description_manual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:paddingLeft="30dp"
                android:text="@string/register_authorValue" />

            <TextView
                android:id="@+id/register_publicationYearText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:layout_weight="1"
                android:text="@string/register_publicationYearText"
                android:textColor="#E5B81D"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_publicationYearValue"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="date"
                android:paddingLeft="30dp" />


            <TextView
                android:id="@+id/register_categoryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="@string/register_categoryText"
                android:textColor="#E5B81D"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/register_categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/register_addButton"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_style"
                android:text="@string/registerbook_button"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>