<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:onClick="GoBack"
                android:src="?attr/homeAsUpIndicator" />

            <TextView
                android:id="@+id/detailsBookText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/detailsBookText"
                android:textScaleX="1"
                android:textSize="24sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="223dp"
                android:layout_height="124dp"
                android:layout_gravity="center_horizontal|center_vertical"
                app:srcCompat="@drawable/no_image"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/details_titleValue"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="30dp"
                android:layout_weight="2"/>

        </LinearLayout>

        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:id="@+id/nb_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:id="@+id/isbn_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_authorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="@string/details_authorText"
                android:textColor="#E5B81D"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_authorValue"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:text="@string/details_authorValue" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="@string/description_livre"
                android:textColor="#e5b81d"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:text="@string/details_publicationYearValue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_publicationYearText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="@string/details_publicationYearText"
                android:textColor="#e5b81d"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_publicationYearValue"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:text="@string/details_publicationYearValue" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_categoryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="@string/details_categoryText"
                android:textColor="#E5B81D"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_categoryValue"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:text="@string/details_categoryValue" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>