<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".ManageAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/manage_userPhotoView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        tools:srcCompat="@tools:sample/avatars" />

                    <Button
                        android:id="@+id/manage_changePhotoButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/button_style"
                        android:text="@string/manage_changePhotoButton"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/manage_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center|left"
                        android:text="@string/manage_lastName"
                        android:textColor="#e5b81d"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/manage_lastNameValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/manage_lastNameValue" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/manage_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/manage_firstName"
                        android:textColor="#e5b81d"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/manage_firstNameValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/manage_firstNameValue" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/manage_DateOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manage_DateOfBirth"
                        android:textColor="#E5B81D"
                        android:textStyle="bold" />

                    <CalendarView
                        android:id="@+id/manage_DoBCalendar"
                        android:layout_width="match_parent"
                        android:layout_height="296dp" />

                    <View
                        android:id="@+id/divider8"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/manage_passwordText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manage_passwordText"
                        android:textColor="#E5B81D"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/manage_passwordValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/manage_modifyPswdButton"
                        android:layout_width="184dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:background="@drawable/button_style"
                        android:text="@string/manage_modifyPswdButton"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>