<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_transparent" />

            <ImageButton
                style="Widget.MaterialComponents.Button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logout"
                android:layout_margin="20dp"
                android:background="@drawable/button_style"
                android:onClick="disconnectButton"
                android:textColor="#FFFFFF"
                android:padding="5dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/home_button_manageAccount"
                style="Widget.MaterialComponents.Button"
                android:layout_alignRight="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/user_light_logo"
                android:layout_margin="20dp"
                android:background="@drawable/button_style"
                android:text="@string/home_button_manageAccount"
                android:textColor="#FFFFFF"
                android:padding="5dp"
                android:textStyle="bold" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/home_button_findLibrary"
                style="Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/home_button_findLibrary"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/find_book_button"
                style="Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/find_book_button"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/home_button_seeReadings"
                style="Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/home_button_seeReadings"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/home_button_friend"
                style="Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:text="@string/text_my_friends"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>