<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <Button
        android:id="@+id/home_button_findLibrary"
        style="Widget.MaterialComponents.Button"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:background="@drawable/button_style"
        android:text="@string/home_button_findLibrary"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home_button_seeReadings"
        style="Widget.MaterialComponents.Button"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="233dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:background="@drawable/button_style"
        android:text="@string/home_button_seeReadings"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home_button_registerBook"
        style="Widget.MaterialComponents.Button"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:background="@drawable/button_style"
        android:text="@string/home_button_registerBook"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home_button_manageAccount"
        style="Widget.MaterialComponents.Button"
        android:layout_width="246dp"
        android:layout_height="47dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:background="@drawable/button_style"
        android:text="@string/home_button_manageAccount"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>